--- a/index.html
+++ b/index.html
@@ -12,6 +12,31 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <header>Weather Dashboard</header>
+
+    <!-- searching tool on left side -->
+    <aside id="searchingCity">
+        <h4>Search for a City</h4>
+        <input id="searchBox">
+        <button id="seachBtn"></button>
+    </aside>
+
+    <!-- a card to display the city, current date, and infor -->
+    <div id="selectACity">
+        <h2 id="city"></h2>
+        <p id="temperature"></p>
+        <p id="humidity"></p>
+        <p id="windSpeed"></p>
+        <p id="uvIndex"></p>
+    </div>
+
+    <!-- display 5-day Forecast -->
+    <div id="forecastBlock">
+        <h3>5-Day Forecast</h3>
+        <div id="multiDayForecast"></div>
+    </div>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
