--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/reset.css">
     <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
     <title>TN-Weather-Dashboard</title>
@@ -13,28 +15,52 @@
 
 <body>
     <!-- Header -->
-    <header>Weather Dashboard</header>
+    <header class="container-fluid py-2 bg-dark text-center text-white font-weight-bold">
+        <h1 id="headerDashboard">Weather Dashboard</h1>
+    </header>
 
-    <!-- searching tool on left side -->
-    <aside id="searchingCity">
-        <h4>Search for a City</h4>
-        <input id="searchBox">
-        <button id="seachBtn"></button>
-    </aside>
+    <div id="searchAndDisplay" class="container-fluid row">
+        <!-- searching tool on left side -->
+        <aside id="searchingCity" class="col-xl-3 bg-light">
+            <p>Search for a City</p>
 
-    <!-- a card to display the city, current date, and infor -->
-    <div id="selectACity">
-        <h2 id="city"></h2>
-        <p id="temperature"></p>
-        <p id="humidity"></p>
-        <p id="windSpeed"></p>
-        <p id="uvIndex"></p>
-    </div>
+            <div class="input-group mb-3">
+                <!-- input box -->
+                <input id="searchBox" class="form-control col-xl-8">
+                <!-- search button -->
+                <div class="input-group-append">
+                    <button id="seachBtn" type="button" class="btn btn-primary"><i class="fa fa-search"></i></button>
+                </div>
+            </div>
 
-    <!-- display 5-day Forecast -->
-    <div id="forecastBlock">
-        <h3>5-Day Forecast</h3>
-        <div id="multiDayForecast"></div>
+            <!-- listed of cities that searched and saved here -->
+            <div id="savedCity">
+                <div class="btn-group-vertical col-12"></div>
+            </div>
+        </aside>
+
+        <div id="weatherInfo" class="col-xl-9 mt-3">
+            <!-- a card to display the city, current date, and infor -->
+            <div id="selectACity" class="card p-3 rounded">
+                <h2 id="city">City Name and Date</h2>
+                <p id="temperature">temperature: </p>
+                <p id="humidity">humidity: </p>
+                <p id="windSpeed">windSpeed:</p>
+                <p id="uvIndex">UV Index: </p>
+            </div>
+
+            <!-- display 5-day Forecast -->
+            <div id="forecastBlock">
+                <p>5-Day Forecast</p>
+                <div id="multiDayForecast" class="container row justify-content-between">
+                    <div class="col">date 1</div>
+                    <div class="col">date 2</div>
+                    <div class="col">date 3</div>
+                    <div class="col">date 4</div>
+                    <div class="col">date 5</div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -44,6 +70,3 @@
 </body>
 
 </html>
-<!-- Modified Jumotron for the header-->
-
-<!-- Grid > .row and .column >  -->
