--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="input-group mb-3">
                 <!-- input box -->
-                <input id="searchBox" class="form-control col-xl-8">
+                <input id="citySearch" class="form-control col-xl-8">
                 <!-- search button -->
                 <div class="input-group-append">
                     <button id="seachBtn" type="button" class="btn btn-primary"><i class="fa fa-search"></i></button>
