--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input id="citySearch" class="form-control col-xl-8">
                 <!-- search button -->
                 <div class="input-group-append">
-                    <button id="seachBtn" type="button" class="btn btn-primary"><i class="fa fa-search"></i></button>
+                    <button id="searchBtn" type="button" class="btn btn-primary"><i class="fa fa-search"></i></button>
                 </div>
             </div>
 
