--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
         <div id="weatherInfo" class="col-xl-9 mt-3">
             <!-- a card to display the city, current date, and infor -->
             <div id="selectACity" class="card p-3 rounded">
-                <h2 id="city">City Name and Date</h2>
-                <p id="temperature">temperature: </p>
-                <p id="humidity">humidity: </p>
-                <p id="windSpeed">windSpeed:</p>
+                <h2 id="city">
+                    <img>
+                </h2>
+                <p id="temperature"></p>
+                <p id="humidity"></p>
+                <p id="windSpeed"></p>
                 <p id="uvIndex">UV Index: </p>
             </div>
 
@@ -66,6 +68,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <script src="./scripts.js"></script>
 </body>
 
