got UV Index value and display on browser

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p id="temperature"></p>
                 <p id="humidity"></p>
                 <p id="windSpeed"></p>
-                <p id="uvIndex">UV Index: </p>
+                <p id="uvIndex"></p>
             </div>
 
             <!-- display 5-day Forecast -->
