add 5-day forcast block

--- a/index.html
+++ b/index.html
@@ -55,11 +55,50 @@
             <div id="forecastBlock">
                 <p>5-Day Forecast</p>
                 <div id="multiDayForecast" class="container row justify-content-between">
-                    <div class="col">date 1</div>
-                    <div class="col">date 2</div>
-                    <div class="col">date 3</div>
-                    <div class="col">date 4</div>
-                    <div class="col">date 5</div>
+                    <div class="card bg-primary rounded text-white mb-1 col-s-12">
+                        <div class="card-body">
+                            <h6 class="card-title">Date1</h6>
+                            <img>
+                            <p>Temp</p>
+                            <p>Humidity</p>
+                        </div>
+                    </div>
+
+                    <div class="card bg-primary rounded text-white mb-1 col-s-12">
+                        <div class="card-body">
+                            <h6 class="card-title">Date2</h6>
+                            <img>
+                            <p>Temp</p>
+                            <p>Humidity</p>
+                        </div>
+                    </div>
+
+                    <div class="card bg-primary rounded text-white mb-1 col-s-12">
+                        <div class="card-body">
+                            <h6 class="card-title">Date3</h6>
+                            <img>
+                            <p>Temp</p>
+                            <p>Humidity</p>
+                        </div>
+                    </div>
+
+                    <div class="card bg-primary rounded text-white mb-1 col-s-12">
+                        <div class="card-body">
+                            <h6 class="card-title">Date4</h6>
+                            <img>
+                            <p>Temp</p>
+                            <p>Humidity</p>
+                        </div>
+                    </div>
+                    
+                    <div class="card bg-primary rounded text-white mb-1 col-s-12">
+                        <div class="card-body">
+                            <h6 class="card-title">Date5</h6>
+                            <img>
+                            <p>Temp</p>
+                            <p>Humidity</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
