get temp and humidity data from API and display for daily

--- a/index.html
+++ b/index.html
@@ -45,55 +45,55 @@
                 <h2 id="city">
                     <img>
                 </h2>
-                <p id="temperature"></p>
-                <p id="humidity"></p>
-                <p id="windSpeed"></p>
-                <p id="uvIndex"></p>
+                <p id="temperature">temperature: </p>
+                <p id="humidity">Humidity: </p>
+                <p id="windSpeed">Wind Speed: </p>
+                <p id="uvIndex">UV Index: </p>
             </div>
 
             <!-- display 5-day Forecast -->
             <div id="forecastBlock">
                 <p>5-Day Forecast</p>
                 <div id="multiDayForecast" class="container row justify-content-between">
-                    <div class="card bg-primary rounded text-white mb-1 col-s-12">
+                    <div class="forecastBlock card bg-primary rounded text-white col-s-12">
                         <div id="blockDate1" class="card-body">
-                            <h6 id="date1" class="card-title">Date1</h6>
+                            <h6 id="date1">Date1</h6>
                             <img id="imgDate1">
                             <p id="tempDate1">Temp</p>
                             <p id="humidityDate1">Humidity</p>
                         </div>
                     </div>
 
-                    <div class="card bg-primary rounded text-white mb-1 col-s-12">
+                    <div class="forecastBlock card bg-primary rounded text-white col-s-12">
                         <div id="blockDate2" class="card-body">
-                            <h6 id="date2" class="card-title">Date1</h6>
+                            <h6 id="date2">Date2</h6>
                             <img id="imgDate2">
                             <p id="tempDate2">Temp</p>
                             <p id="humidityDate2">Humidity</p>
                         </div>
                     </div>
 
-                    <div class="card bg-primary rounded text-white mb-1 col-s-12">
+                    <div class="forecastBlock card bg-primary rounded text-white col-s-12">
                         <div id="blockDate3" class="card-body">
-                            <h6 id="date3" class="card-title">Date1</h6>
+                            <h6 id="date3">Date3</h6>
                             <img id="imgDate3">
                             <p id="tempDate3">Temp</p>
                             <p id="humidityDate3">Humidity</p>
                         </div>
                     </div>
 
-                    <div class="card bg-primary rounded text-white mb-1 col-s-12">
+                    <div class="forecastBlock card bg-primary rounded text-white col-s-12">
                         <div id="blockDate4" class="card-body">
-                            <h6 id="date4" class="card-title">Date1</h6>
+                            <h6 id="date4">Date4</h6>
                             <img id="imgDate4">
                             <p id="tempDate4">Temp</p>
                             <p id="humidityDate4">Humidity</p>
                         </div>
                     </div>
                     
-                    <div class="card bg-primary rounded text-white mb-1 col-s-12">
+                    <div class="forecastBlock card bg-primary rounded text-white col-s-12">
                         <div id="blockDate5" class="card-body">
-                            <h6 id="date5" class="card-title">Date1</h6>
+                            <h6 id="date5">Date5</h6>
                             <img id="imgDate5">
                             <p id="tempDate5">Temp</p>
                             <p id="humidityDate5">Humidity</p>
