--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="input-group mb-3">
                 <!-- input box -->
-                <input id="citySearch" class="form-control col-xl-8">
+                <input id="citySearch" class="form-control col-xl-8" placeholder="Search City">
                 <!-- search button -->
                 <div class="input-group-append">
                     <button id="searchBtn" type="button" class="btn btn-primary"><i class="fa fa-search"></i></button>
@@ -35,7 +35,7 @@
 
             <!-- listed of cities that searched and saved here -->
             <div id="savedCity">
-                <div class="btn-group-vertical col-12"></div>
+                <div id="searchedCities" class="btn-group-vertical col-12"></div>
             </div>
         </aside>
 
