--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
             <!-- listed of cities that searched and saved here -->
             <div id="savedCity">
-                <div id="searchedCities" class="btn-group-vertical col-12"></div>
+                <div id="searchedCities" class="btn-group-vertical col-12">
+                    <button class="btn text-left border border-danger rounded">cities</button>
+                </div>
             </div>
         </aside>
 
