end of the day. Commit to saved current works. localstorage is not working yet

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- listed of cities that searched and saved here -->
             <div id="savedCity">
                 <div id="searchedCities" class="btn-group-vertical col-12">
-                    <button class="btn text-left border border-danger rounded">cities</button>
+                    <!-- <button class="btn text-left border border-danger rounded">cities</button> -->
                 </div>
             </div>
         </aside>
