add hidden class to hide weather data page in html, and remove it after click search/cities buttons

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </aside>
 
-        <div id="weatherInfo" class="col-xl-9 mt-3">
+        <div id="weatherInfo" class="col-xl-9 mt-3 hidden">
             <!-- a card to display the city, current date, and infor -->
             <div id="selectACity" class="card p-3 rounded">
                 <h2 id="city">
@@ -53,7 +53,7 @@
             </div>
 
             <!-- display 5-day Forecast -->
-            <div id="forecastBlock">
+            <div id="forecastBlock" class="hidden">
                 <p>5-Day Forecast</p>
                 <div id="multiDayForecast" class="container row justify-content-between">
                     <div class="forecastBlock card bg-primary rounded text-white col-s-12">
